adding styling and css folder

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
     <head>
       <meta charset="utf-8">
       <title>DEMO!!</title>
+      <link rel="stylesheet" href="css/index.css">
     </head>
     <body>
+
       <main class="main-content">
         <div class="grid-container">
           <div class="grid-item">
@@ -12,6 +14,7 @@
           </div>
           <div class="grid-item">
             <span class="profile-name">John Smith</span>
+            
           </div>
           <div class="grid-item">
             <span class="profile-name">Chris Davies</span>
